<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/displayinfo"
        android:layout_width="match_parent"
        android:layout_below="@id/display"
        android:layout_height="100px"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_clr"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_clr"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_pwr"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_clr"
        android:layout_toRightOf="@id/button_clr"
        android:text="@string/button_pwr"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_prcnt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_clr"
        android:layout_toRightOf="@id/button_pwr"
        android:text="@string/button_prcnt"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_div"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_clr"
        android:layout_toRightOf="@id/button_prcnt"
        android:text="@string/button_div"
        android:textAllCaps="false"
        android:textSize="30sp" />


    <Button
        android:id="@+id/button_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/button_clr"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_7"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_7"
        android:layout_toRightOf="@id/button_7"
        android:text="@string/button_8"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_7"
        android:layout_toRightOf="@id/button_8"
        android:text="@string/button_9"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_mult"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_7"
        android:layout_toRightOf="@id/button_9"
        android:textAllCaps="false"
        android:text="@string/button_mult"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/button_7"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_4"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_4"
        android:layout_toRightOf="@id/button_4"
        android:text="@string/button_5"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_4"
        android:layout_toRightOf="@id/button_5"
        android:text="@string/button_6"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_sub"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_4"
        android:layout_toRightOf="@id/button_6"
        android:textAllCaps="false"
        android:text="@string/button_sub"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/button_4"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_1"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_1"
        android:layout_toRightOf="@id/button_1"
        android:text="@string/button_2"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_1"
        android:layout_toRightOf="@id/button_2"
        android:text="@string/button_3"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_1"
        android:layout_toRightOf="@id/button_3"
        android:textAllCaps="false"
        android:text="@string/button_add"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_neg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/button_1"
        android:layout_marginLeft="20dp"
        android:text="@string/button_neg"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_neg"
        android:layout_toRightOf="@id/button_neg"
        android:text="@string/button_0"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_dec"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_neg"
        android:layout_toRightOf="@id/button_0"
        android:text="@string/button_dec"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_eql"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@id/button_neg"
        android:layout_toRightOf="@id/button_dec"
        android:textAllCaps="false"
        android:text="@string/button_eql"
        android:textSize="30sp"/>

</RelativeLayout>